src/test/ui/rfc-1937-termination-trait/termination-trait-main-wrong-type.stderr
error[E0277]: the trait bound `char: std::process::Termination` is not satisfied
  --> $DIR/termination-trait-main-wrong-type.rs:11:14
   |
LL | fn main() -> char { //~ ERROR
   |              ^^^^ `main` can only return types that implement std::process::Termination, not `char`
   |
   = help: the trait `std::process::Termination` is not implemented for `char`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
